- add privacy link placeholder - amend focus styling (header and login) - fix bug with edit section options not showing

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -40,9 +40,10 @@ h1, h2, h3, h4, h5, h6,
     color: $textalt;
     background-color: $button;
     border-color: $button;
-    &:hover, &:active {
+    &:hover, &:active, &:focus {
         background-color: $buttonalt;
         border-color: $buttonalt;
+        color: $dark;
     }
 }
 
@@ -79,8 +80,6 @@ h1, h2, h3, h4, h5, h6,
     
     .btn {
         font-size: 16px;
-    }
-    .btn-primary {
         color: $textprimary;
         background-color: $brandweb;
         border-color: $brandweb;
@@ -474,6 +473,10 @@ header .navbar-nav {
         float: none;
         flex: 0 1 auto;
         line-height: 1;
+        &:focus,
+        &:hover {
+            color: $textprimary;
+        }
     }
     .user-menu-wrapper {
         width: 120px;
@@ -725,7 +728,7 @@ header .navbar-nav {
 
     .left, .right {
         position: relative;
-        //z-index: 1;
+        z-index: 1;
     }
 }
 
@@ -872,6 +875,9 @@ header .navbar-nav {
     }
 }
 
+.btn-secondary .icon {
+    color: $lightest;
+}
 
 // #RELEASENOTES ///////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////
